# pyospackage

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/pyospackage/: __about__.py  add_numbers.py
src/pyospackage_pb_413/: __init__.py
