[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyospackage_pb_413"
version = "0.1.0"
description = 'Project following the pyOpenSci tutoria: https://www.pyopensci.org/python-package-guide/tutorials/intro.html'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Patrick K. Byers", email = "pbyers413@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Patrick K. Byers/pyospackage_pb_413#readme"
Issues = "https://github.com/Patrick K. Byers/pyospackage_pb_413/issues"
Source = "https://github.com/Patrick K. Byers/pyospackage_pb_413"
