[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyospackage_pb_413"
version = "0.1.3"
description = """Project following the pyOpenSci tutorial:
https://www.pyopensci.org/python-package-guide/tutorials/intro.html"""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = []
authors = [
  { name = "Patrick K. Byers", email = "pbyers413@gmail.com" },
]
maintainers = [
  { name = "Patrick K. Byers", email = "pbyers413@gmail.com" },
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development",

  # Specify the Python versions you support here.
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.0",      # Greater than or equal to 1.0
  "requests==10.1",  # Exactly 10.1
  "pandas",          # Any version
  "pydantic>=1.7,<2" # Greater than or equal to 1.7, but less than 2
]

[project.urls]
Documentation = "https://github.com/pb-413/pyospackage?tab=readme-ov-file#readme"
Issues = "https://github.com/pb-413/pyospackage/issues"
Source = "https://github.com/pb-413/pyospackage"
